--- a/index.html
+++ b/index.html
@@ -1,65 +1,267 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-cn">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="一个默默无闻的主页" />
-  <meta name="keywords" content="無名,个人主页" />
-  <meta name="author" content="無名" />
-  <meta name="theme-color" content="#424242" />
-  <title><%- title %></title>
-  <!-- HarmonyOS Sans -->
-  <!-- 本站 CDN 已开启防盗链，非本站域名不可访问，请更改链接为下方内容，否则自定义字体将失效 -->
-  <!-- https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css -->
-  <link rel="stylesheet" href="https://cdn.imsyy.top/gh/imsyy/file/font/HarmonyOS_Sans/regular.min.css" />
-  <link rel="icon" href="/images/icon/favicon.ico">
-  <link rel="apple-touch-icon" href="/images/icon/apple-touch-icon.png">
-  <link rel="stylesheet" href="/loading/loading.min.css">
-  <!-- IE Out -->
-  <script>
-    if ( /*@cc_on!@*/ false || (!!window.MSInputMethodContext && !!document.documentMode))
-      window.location.href =
-      "https://support.dmeng.net/upgrade-your-browser.html?referrer=" + encodeURIComponent(window.location.href)
-  </script>
-  <!-- 百度统计 -->
-  <script>
-    var _hmt = _hmt || [];
-    (function () {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?14e9f35ff8bc67fd4bcb5f07a6e6655a";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="https://blog.sunguoqi.com/upload/avatar.png">
+	<title>小孙同学</title>
+	<link rel="apple-touch-icon-precomposed" href="images/avatar.bab2b7d4.jpeg">
+	<link rel="stylesheet" type="text/css" href="css/h.9c69ed6c.css">
+	<link rel="stylesheet" type="text/css" href="css/nekotora.99cf6f8c.css">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137340638-1"></script>
+	<script>
+		function a() {
+			dataLayer.push(arguments)
+		}
+		window.dataLayer = window.dataLayer || [], a("js", new Date), a("config", "UA-137340638-1");
+	</script>
 </head>
 
-<body class="loading">
-  <!--加载动画-->
-  <div id="loading-box">
-    <div class="loading-left-bg"></div>
-    <div class="loading-right-bg"></div>
-    <div class="spinner-box">
-      <div class="loader">
-        <div class="inner one"></div>
-        <div class="inner two"></div>
-        <div class="inner three"></div>
-      </div>
-      <div class="loading-word">
-        <p class="loading-title" id="loading-title"><%- title %></p>
-        <span id="loading-text">加载中</span>
-      </div>
-    </div>
-  </div>
-  <!-- 主体内容 -->
-  <div id="app"></div>
-  <!-- noscript -->
-  <noscript>
-    <div style="text-align: center">请开启 JavaScript</div>
-  </noscript>
-  <script type="module" src="/src/main.js"></script>
-</body>
+<body>
+	<nav>
+		<a href="https://www.sunguoqi.com/" target="_blank" class="active">首页</a> <a class="clip"></a>
+		<a href="https://www.sunguoqi.com/categories/" target="_blank">归档</a>
+		<a class="clip"></a> <a href="https://www.sunguoqi.com/archives/" target="_blank">文章</a>
+		<a class="clip"></a> <a href="https://www.sunguoqi.com/comments/" target="_blank">留言板</a>
+	</nav>
+
+	<body onContextMenu="alert('禁止查看源代码，您的行为已记录。'); return false"
+		NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');">
+		<div class="background">
+			<canvas id="startrack"></canvas>
+			<div class="cover"></div>
+		</div>
+		<div class="main">
+			<div class="ch intro">
+				<div class="container">
+					<div class="hello">
+						<h1 id="slogan">思考中...</h1>
+						<h2>
+							<div class="circle"> <span></span> <span></span>
+								<span></span>
+							</div>小孙同学在努力
+						</h2>
+					</div>
+				</div>
+			</div>
+			<div class="ch about">
+				<div class="container">
+					<h2 class="chtitle">Who am <span>小孙同学</span>？</h2>
+					<div class="clear">
+						<div class="introduct">
+							<img class="avatar"
+								src="https://blog.sunguoqi.com/upload/avatar.png">
+							<P style="padding-top:1em;">坚硬的代替了那些柔软的，清晰的取代了那些模糊的。那些滑溜溜和黏糊糊的东西，带你来到了世界的角落。</p>
+							<br>
+							<p>你好，这里是小孙同学，20岁，是学生，热爱计算机互联网事业，对有趣的世界和可能有趣的你充满好奇，小孙同学在努力...
+							</p> <br>
+							<p>
+								一望无际的迷雾中，有人在寻找光明！很高兴遇到你，我们一直在耕耘这么一片简单的土壤，虽然没有尽善尽美，但以初见雏形。<br>
+								<br>十年前我们仰望星空，十年后我们将俯视大地，未来的天空，必将为我们留下一片灿烂的曙光！
+							</p>
+							<div class="chatbox">
+								<div class="line loading"> <span></span>
+									<span></span> <span></span>
+								</div>
+							</div>
+						</div>
+						<ul class="skill clear">
+							<li>
+								<p>HTML5/CSS3</p>
+								<div class="progress">
+									<div style="width:50%;"></div>
+									<span>制作网站程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>JavaScript</p>
+								<div class="progress">
+									<div style="width:50%;"></div>
+									<span>使用现代轮子程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>PHP</p>
+								<div class="progress">
+									<div style="width:20%;"></div>
+									<span>赞美最好的语言程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>设计能力</p>
+								<div class="progress">
+									<div style="width:50%;">
+									</div><span>让自己舒服程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>洞察</p>
+								<div class="progress">
+									<div style="width:60%;"></div>
+									<span>观测世界程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>花里胡哨</p>
+								<div class="progress">
+									<div style="width:80%;"></div>
+									<span>让事情发生程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>魔法</p>
+								<div class="progress">
+									<div style="width:12%;"></div>
+									<span>和普通人相同程度的能力</span>
+								</div>
+							</li>
+							<li>
+								<p>恋爱能力</p>
+								<div class="progress">
+									<div style="width:10%;"></div>
+									<span>遇见喜欢的小姐姐要勇敢追</span>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="find ch">
+				<div class="container links">
+					<h2 class="chtitle">小孙同学出没的<span>地方</span></h2>
+					<div class="clear col-3">
+						<a href="https://blog.csdn.net/weixin_50915462?spm=1000.2115.3001.5343" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#28a9e0"></div>
+								<div class="inner"> <span>CSDN博客</span> </div>
+							</div>
+						</a>
+						<a href="https://www.cnblogs.com/sunguoqi/" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#28a9e0"></div>
+								<div class="inner"> <span>博客园</span> </div>
+							</div>
+						</a>
+						<a href="https://blog.sunguoqi.com/upload/qrcode.jpg" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#28a9e0"></div>
+								<div class="inner"> <span>微信公众号</span> </div>
+							</div>
+						</a>
+					</div>
+					<div class="clear">
+						<a href="https://twitter.com/sun0225SUN" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#28a9e0"></div>
+								<div class="inner"> <i class="icon-twitter"></i> <span>Twitter</span> </div>
+							</div>
+						</a>
+						<a href="https://weibo.com/7392882465/profile?rightmod=1&wvr=6&mod=personinfo" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#e6162d"></div>
+								<div class="inner"> <i class="icon-weibo"></i> <span>Weibo</span> </div>
+							</div>
+						</a>
+						<a href="https://github.com/sun0225SUN" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#353535"></div>
+								<div class="inner"> <i class="icon-github"></i> <span>Github</span> </div>
+							</div>
+						</a>
+						<a href="https://space.bilibili.com/448488855?spm_id_from=333.33.b_73656375726974794f75744c696e6b.1"
+							target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#f9a2a8"></div>
+								<div class="inner"> <i class="icon-bilibili"></i>
+									<span>Bilibili</span>
+								</div>
+							</div>
+						</a>
+
+						<a href="https://www.zhihu.com/people/sunguoqi" target="_blank">
+							<div class="item">
+								<div class="bg" style="background-color:#0f88eb"></div>
+								<div class="inner"> <i class="icon-zhihu"></i>
+									<span>知乎</span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="gate ch">
+				<div class="container links">
+					<h2 class="chtitle">小孙同学的<span>小伙伴</span>们</h2>
+
+					<!-- 友链 -->
+					<div class="clear"> <a href="https://sunguoqi.com" target="_blank">
+							<div class="item">
+								<div class="avatar"> <img
+										src="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210719203648.jpg">
+								</div>
+								<div class="inner">
+									<h5>小孙同学</h5>
+									<p>我的博客网站</p>
+								</div>
+							</div>
+						</a>
+
+						<a href="https://blog.sunguoqi.com/upload/qrcode.jpg" target="_blank">
+							<div class="item">
+								<div class="avatar"> <img
+										src="https://blog.sunguoqi.com/upload/qrcode.jpg">
+								</div>
+								<div class="inner">
+									<h5>微信公众号</h5>
+									<p>不负人间理想！</p>
+								</div>
+							</div>
+						</a>
+
+						<a href="https://hexo.io/zh-cn/index.html" target="_blank">
+							<div class="item">
+								<div class="avatar"> <img src="images/hexo.jpg"> </div>
+								<div class="inner">
+									<h5>Hexo</h5>
+									<p>快速、简洁且高效的博客框架</p>
+								</div>
+							</div>
+						</a>
+
+						<a href="https://butterfly.js.org/" target="_blank">
+							<div class="item">
+								<div class="avatar"> <img src="images/butterfly.png"> </div>
+								<div class="inner">
+									<h5>Butterful</h5>
+									<p>Butterful主题</p>
+								</div>
+							</div>
+						</a>
+
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+
+		<div class="footer ch">
+			<div class="container">
+				<h3>小孙同学在努力</h3>
+				<p>蘑菇森林的尽头，新世界的起点</p>
+				<p class="c"><a href="/" target="_blank">Say hello to me @ sunshine</a></p>
+			</div>
+		</div>
+		</div>
+		<script src="js/page.3a0791a3.js"></script>
+		<script type="text/javascript" src="js/stats.js" charset="UTF-8">
+		</script>
+
+		<audio autoplay>
+			<source src="https://api.uomg.com/api/rand.music?sort=热歌榜" type="audio/mpeg">
+		</audio>
+
+	</body>
 
 </html>
