--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://blog.sunguoqi.com/upload/avatar.png">
-	<title>小孙同学</title>
+	<title>Smj.Love.C</title>
 	<link rel="apple-touch-icon-precomposed" href="images/avatar.bab2b7d4.jpeg">
 	<link rel="stylesheet" type="text/css" href="css/h.9c69ed6c.css">
 	<link rel="stylesheet" type="text/css" href="css/nekotora.99cf6f8c.css">
@@ -20,12 +20,12 @@
 </head>
 
 <body>
-	<nav>
-		<a href="https://www.sunguoqi.com/" target="_blank" class="active">首页</a> <a class="clip"></a>
-		<a href="https://www.sunguoqi.com/categories/" target="_blank">归档</a>
-		<a class="clip"></a> <a href="https://www.sunguoqi.com/archives/" target="_blank">文章</a>
-		<a class="clip"></a> <a href="https://www.sunguoqi.com/comments/" target="_blank">留言板</a>
-	</nav>
+	<!-- <nav>
+		<a href="/" target="_blank" class="active">首页</a> <a class="clip"></a>
+		<a href="/categories/" target="_blank">归档</a>
+		<a class="clip"></a> <a href="/archives/" target="_blank">文章</a>
+		<a class="clip"></a> <a href="/comments/" target="_blank">留言板</a>
+	</nav> -->
 
 	<body onContextMenu="alert('禁止查看源代码，您的行为已记录。'); return false"
 		NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');">
@@ -41,14 +41,14 @@
 						<h2>
 							<div class="circle"> <span></span> <span></span>
 								<span></span>
-							</div>小孙同学在努力
+							</div>Smj.Love.C
 						</h2>
 					</div>
 				</div>
 			</div>
 			<div class="ch about">
 				<div class="container">
-					<h2 class="chtitle">Who am <span>小孙同学</span>？</h2>
+					<h2 class="chtitle">Who am <span>Smj.Love.C</span>？</h2>
 					<div class="clear">
 						<div class="introduct">
 							<img class="avatar"
@@ -248,7 +248,7 @@
 
 		<div class="footer ch">
 			<div class="container">
-				<h3>小孙同学在努力</h3>
+				<h3>Smj.Love.C</h3>
 				<p>蘑菇森林的尽头，新世界的起点</p>
 				<p class="c"><a href="/" target="_blank">Say hello to me @ sunshine</a></p>
 			</div>
