--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 		let clipboard = new ClipboardJS(id);
 		clipboard.on('success', function (e) {
 			console.log(e);
-			alert('肥猫提醒：复制成功，请前往tvbox接口粘贴')
+			alert('Smj.Love.C提醒：复制成功，请前往tvbox接口粘贴')
 			clipboard.destroy();//解决多次弹窗问题
 		});
 		clipboard.on('error', function (e) {
@@ -341,7 +341,7 @@
 	}
 </script>
 <!--在线播放器API-->
-<script src="https://myhkw.cn/api/player/167013822195" id="myhk" key="167013822195" m="1"></script>
+<script src="https://myhkw.cn/api/player/1677136233107" id="myhk" key="1677136233107" m="1"></script>
 <!--雪花API-->
 <script src='https://api.vvhan.com/api/snow'></script>
 <!--看板娘-->
