--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
 			</div>
 		</div>
 		</div>
-
+            <!--底部波浪-->
+            <div id="hans-bolang"></div><script src="https://api.vvhan.com/api/bolang"></script>
 		<div class="footer ch">
 			<div class="container">
 				<h3>Smj.Love.C</h3>
