--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="find ch">
+			<!-- <div class="find ch">
 				<div class="container links">
 					<h2 class="chtitle">Smj.Love.C出没的<span>地方</span></h2>
 					<div class="clear col-3">
@@ -190,7 +190,7 @@
 						</a>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="find ch">
 				<div class="container links">
@@ -413,58 +413,6 @@
 						</a>
 					</div>
 
-				</div>
-			</div>
-			<div class="gate ch">
-				<div class="container links">
-					<h2 class="chtitle">Smj.Love.C的<span>小伙伴</span>们</h2>
-
-					<!-- 友链 -->
-					<div class="clear"> <a href="https://sunguoqi.com" target="_blank">
-							<div class="item">
-								<div class="avatar"> <img
-										src="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210719203648.jpg">
-								</div>
-								<div class="inner">
-									<h5>小孙同学</h5>
-									<p>我的博客网站</p>
-								</div>
-							</div>
-						</a>
-
-						<a href="https://blog.sunguoqi.com/upload/qrcode.jpg" target="_blank">
-							<div class="item">
-								<div class="avatar"> <img
-										src="https://blog.sunguoqi.com/upload/qrcode.jpg">
-								</div>
-								<div class="inner">
-									<h5>微信公众号</h5>
-									<p>不负人间理想！</p>
-								</div>
-							</div>
-						</a>
-
-						<a href="https://hexo.io/zh-cn/index.html" target="_blank">
-							<div class="item">
-								<div class="avatar"> <img src="images/hexo.jpg"> </div>
-								<div class="inner">
-									<h5>Hexo</h5>
-									<p>快速、简洁且高效的博客框架</p>
-								</div>
-							</div>
-						</a>
-
-						<a href="https://butterfly.js.org/" target="_blank">
-							<div class="item">
-								<div class="avatar"> <img src="images/butterfly.png"> </div>
-								<div class="inner">
-									<h5>Butterful</h5>
-									<p>Butterful主题</p>
-								</div>
-							</div>
-						</a>
-
-					</div>
 				</div>
 			</div>
 		</div>
